# WormTracer

./: .gitignore  .gitmodules  README.md  Tutorial_en.md  config.json  pyproject.toml  requirements.txt  setup.py  temp.py
WormTracer19_3/: setup.py
WormTracer19_3/WormTracer/: functions.py  wt.py
WormTracer20_1/: pyproject.toml  setup.py
WormTracer20_1/WormTracer/: WT19_3.ipynb  __main__.py  functions.py  functions.pyi  wt.py  wt.pyi
WormTracer20_1/WormTracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: wt.npy  wt_metadata.txt
examples/: WT17_5.ipynb  training_script.py  wt17_5.py
src/legacy/: functions.py
src/tests/: test_find_nont_area.py  test_get_skeleton.py
src/tests/test_model/: test_worm_width.py
src/wormtracer/: __init__.py  dataset.py  formula.py  loss.py  model.py  parameter.py  plot.py  preprocess.py  skeleton.c  skeleton.pyx  train.py  types.py  utils.py
src/wormtracer/legacy/: skeleton.c  skeleton.pyx
