[build-system]
requires = ["wheel", "setuptools", "pip", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "wormtracer"
authors = [
    { 'name' = 'Koyo Kuze' },
    { 'name' = 'Ukyo T. Tazawa' },
    { 'name' = 'Karin Suwazono' },
    { 'name' = 'Yu Toyoshima' },
    { 'name' = 'Yuichi Iino' },
]
version = "0.1.0"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT"]
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "scikit-image",
    "matplotlib",
    "attrs",
    "tqdm",
    "torch",
]


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["*"]
exclude = ["tests*", "legacy*"]
namespaces = false
