[build-system]
requires = ["wheel", "setuptools", "pip", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "wormtracer"
authors = [
    { 'name' = 'Koyo Kuze' },
    { 'name' = 'Ukyo T. Tazawa' },
    { 'name' = 'Karin Suwazono' },
    { 'name' = 'Yu Toyoshima' },
    { 'name' = 'Yuichi Iino' },
]
version = "0.1.0"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT"]
dependencies = [
    "numpy",
    "opencv-python-headless",
    "scipy",
    "scikit-image",
    "matplotlib",
    "attrs",
    "tqdm",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
    "loguru>=0.7.2",
    "torch-distmap>=0.2.0",
]



[tool.rye]
dev-dependencies = [
    "ipykernel>=6.29.4",
    "ipython>=8.23.0",
    "pytest>=8.1.1",
    "pip>=24.0",
    "notebook>=7.1.3",
    "ruff>=0.4.1",
]


[[tool.rye.sources]]
name = "cuda"
url = "https://download.pytorch.org/whl/cu121"


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["*"]
exclude = ["tests*", "legacy*"]
namespaces = false


[tool.ruff]
exclude = ["legacy", "examples"]

[tool.ruff.lint]
extend-select = ["I001"]
ignore = ["F401"]
